Restructure jlink writeup as explicit broke/fixed steps in SECURITY.md